# chief-justice

./: .dockerignore  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
UI/: remindme_modal.py
Views/: ReloadCases.py  TakeCase.py
cogs/: cases.py  judges.py  lawyers.py  misc.py  reminders.py  renewals.py
database_managers/: CaseManager.py  DatabaseManagerBase.py  JudgeManager.py  LawyerManager.py  ReminderManager.py
utils/: enums.py  models.py  utils.py
web_handlers/: MainForumRegistryEditor.py  MainForumScraper.py
web_handlers/forum_post_code/: final_post.txt  registry_base.txt
