[tool.poetry]
name = "chief-justice"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pandas = "^1.5.3"
requests = "^2.28.2"
pymongo = "^4.3.3"
beautifulsoup4 = "^4.11.2"
py-cord = "^2.4.0"
aiodns = "^3.0.0"
brotlipy = "^0.7.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
motor = "^3.1.1"
feedparser = "^6.0.10"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
