[tool.poetry]
name = "chief-justice"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
requests = "^2.28.2"
py-cord = "^2.4.0"
feedparser = "^6.0.10"
aiodns = "^3.0.0"
brotlipy = "^0.7.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
